# pydarts

./: README.md  pyproject.toml
pydarts/: main.py
pydarts/core/: __init__.py  modes.py  players.py
pydarts/core/_modes/: 301.py  501.py  701.py  __init__.py
pydarts/core/modes/: __init__.py
pydarts/gui/: __init__.py  app.py  game.py  postgame.py  pregame.py
