[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pydarts"
version = "0.0.0"
description = "Desktop app for tracking the score of a Darts game."
authors = ["Martin Neufeld <m.neufeld946@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
pydarts = "pydarts.main:main"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"

[tool.poetry-dynamic-versioning]
enable = true
